--- a/css/main.css
+++ b/css/main.css
@@ -1159,7 +1159,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #ffc79f;
+  background: #e5c1b8;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
